2006-05-20  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: better memory performance for xhash
    * jabberd/lib/xhash.c: same

2006-05-05  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_offline.c: mod_offline serialization
    * jsm/modules.c: same
    * jsm/serialization.c: same

2006-05-04  Matthias Wimmer  <m@tthias.eu>

    * jsm/jsm.h: removed redundant variable
    * jsm/users.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_filter.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/serialization.c: same

2006-05-03  Matthias Wimmer  <m@tthias.eu>

    * jsm/jsm.h: remove unused variables
    * jsm/sessions.c: same
    * jsm/modules/mod_announce.c: fixing small memory leak
    * jsm/modules/mod_xml.c: same
    * jabber.xml.dist.in: started state serialization of jsm
    * jabberd/lib/jabberdlib.h: same
    * jsm/jsm.h: same
    * jsm/Makefile.am: same
    * jsm/modules.c: same
    * jsm/jsm.c: same
    * jsm/serialization.c: same

2006-04-30  Matthias Wimmer  <m@tthias.eu>

    * jsm/jsm.h: do not cache password in session manager
    * jsm/users.c: same
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/deliver.c: same

2006-04-26  Matthias Wimmer  <m@tthias.eu>

    * jabber.xml.dist.in: updated default browse result
    * xdb_sql/xdb_sql.c: allowing to have multiple <query/>, <delete/>,
    	and <set/> elements in a sql handler definition

2006-04-25  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.c: fixed reestablishing of mysql server connections

2006-03-15  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: changed category and type of the disco#info result
    	for the jabber server (closing bug 35)